syntax = "proto3";

package user.v1;

option go_package = "github.com/devoraq/Obfuscatorium_backend/pkg/gen/go/user/v1;userv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };
  }
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = { get: "/api/v1/users/{id}" };
  }
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      patch: "/api/v1/users/{id}"
      body: "*"
    };
  }
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = { delete: "/api/v1/users/{id}" };
  }
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message CreateUserResponse {
  User user = 1;
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string access_token = 1;
  string token_type = 2;
  int32 expires_in = 3;
  User user = 4;
}

message GetUserRequest { string id = 1; }
message GetUserResponse { User user = 1; }

message UpdateUserRequest {
  string id = 1;
  optional string username = 2;
  optional string email = 3;
  optional string password = 4;
  optional string avatar = 5;
  optional string bio = 6;
  optional string role = 7;
  google.protobuf.FieldMask update_mask = 8;
}

message UpdateUserResponse { User user = 1; }

message DeleteUserRequest { string id = 1; }
message DeleteUserResponse {}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  optional string avatar = 4;
  optional string bio = 5;
  string role = 6;
  google.protobuf.Timestamp created_at = 7;
}
